--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Canon70D/POS#readme",
   "dependencies": {
     "apollo-server-express": "^3.10.3",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "colors": "^1.4.0",
     "concurrently": "^7.5.0",
