--- a/package.json
+++ b/package.json
@@ -6,144 +6,144 @@
   "dependencies": {
     "accepts": "^1.3.8",
     "ansi-regex": "^5.0.1",
-    "apollo-server-errors": "^3.3.1",
-    "apollo-server-core": "^3.10.3",
+    "ansi-styles": "^4.3.0",
     "apollo-datasource": "^3.3.2",
     "apollo-reporting-protobuf": "^3.3.3",
-    "ansi-styles": "^4.3.0",
+    "apollo-server-core": "^3.10.3",
     "apollo-server-env": "^4.2.1",
+    "apollo-server-errors": "^3.3.1",
     "apollo-server-express": "^3.10.3",
-    "apollo-server-types": "^3.6.3",
     "apollo-server-plugin-base": "^3.6.3",
+    "apollo-server-types": "^3.6.3",
     "array-flatten": "^1.1.1",
     "async-retry": "^1.3.3",
     "base64-js": "^1.5.1",
     "basic-auth": "^2.0.1",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "bson": "^4.7.0",
     "buffer": "^5.7.1",
     "bytes": "^3.1.2",
-    "bson": "^4.7.0",
+    "call-bind": "^1.0.2",
     "chalk": "^4.1.2",
     "cliui": "^8.0.1",
-    "color-name": "^1.1.4",
     "color-convert": "^2.0.1",
-    "call-bind": "^1.0.2",
+    "color-name": "^1.1.4",
     "colors": "^1.4.0",
-    "content-type": "^1.0.4",
     "commander": "^2.20.3",
-    "cookie": "^0.5.0",
-    "content-disposition": "^0.5.4",
-    "cors": "^2.8.5",
-    "debug": "^2.6.9",
-    "cookie-signature": "^1.0.6",
     "concurrently": "^7.5.0",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.4",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
     "cssfilter": "^0.0.10",
-    "destroy": "^1.2.0",
-    "denque": "^2.1.0",
-    "dotenv": "^16.0.3",
-    "depd": "^2.0.0",
     "date-fns": "^2.29.3",
-    "emoji-regex": "^8.0.0",
+    "debug": "^2.6.9",
+    "denque": "^2.1.0",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "dotenv": "^16.0.3",
     "ee-first": "^1.1.1",
+    "emoji-regex": "^8.0.0",
     "encodeurl": "^1.0.2",
     "escalade": "^3.1.1",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
-    "fast-json-stable-stringify": "^2.1.0",
     "express": "^4.18.2",
-    "forwarded": "^0.2.0",
+    "fast-json-stable-stringify": "^2.1.0",
     "finalhandler": "^1.2.0",
+    "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
     "function-bind": "^1.1.1",
-    "graphql": "^16.6.0",
     "get-caller-file": "^2.0.5",
     "get-intrinsic": "^1.1.3",
-    "has": "^1.0.3",
-    "http-errors": "^2.0.0",
-    "has-flag": "^4.0.0",
-    "iconv-lite": "^0.4.24",
+    "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "has": "^1.0.3",
+    "has-flag": "^4.0.0",
     "has-symbols": "^1.0.3",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
     "ieee754": "^1.2.1",
     "inherits": "^2.0.4",
     "ip": "^2.0.0",
-    "kareem": "^2.4.1",
     "ipaddr.js": "^1.9.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "kareem": "^2.4.1",
     "lodash": "^4.17.21",
     "lodash.sortby": "^4.7.0",
-    "long": "^4.0.0",
-    "is-fullwidth-code-point": "^3.0.0",
     "loglevel": "^1.8.0",
-    "merge-descriptors": "^1.0.1",
+    "long": "^4.0.0",
     "lru-cache": "^6.0.0",
-    "memory-pager": "^1.5.0",
     "media-typer": "^0.3.0",
+    "memory-pager": "^1.5.0",
+    "merge-descriptors": "^1.0.1",
     "methods": "^1.1.2",
     "mime": "^1.6.0",
     "mime-db": "^1.52.0",
-    "mongodb": "^4.9.1",
-    "morgan": "^1.10.0",
     "mime-types": "^2.1.35",
-    "mongoose": "^6.6.6",
-    "mpath": "^0.9.0",
-    "ms": "^2.0.0",
-    "node-fetch": "^2.6.7",
+    "mongodb": "^4.9.1",
     "mongodb-connection-string-url": "^2.5.4",
+    "mongoose": "^6.6.6",
+    "morgan": "^1.10.0",
+    "mpath": "^0.9.0",
     "mquery": "^4.0.3",
-    "object-assign": "^4.1.1",
-    "parseurl": "^1.3.3",
-    "on-finished": "^2.4.1",
-    "punycode": "^2.1.1",
-    "on-headers": "^1.0.2",
-    "proxy-addr": "^2.0.7",
-    "path-to-regexp": "^0.1.7",
-    "range-parser": "^1.2.1",
-    "qs": "^6.11.0",
-    "retry": "^0.13.1",
+    "ms": "^2.0.0",
     "negotiator": "^0.6.3",
+    "node-fetch": "^2.6.7",
+    "object-assign": "^4.1.1",
     "object-inspect": "^1.12.2",
-    "rxjs": "^7.5.7",
+    "on-finished": "^2.4.1",
+    "on-headers": "^1.0.2",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.7",
+    "proxy-addr": "^2.0.7",
+    "punycode": "^2.1.1",
+    "qs": "^6.11.0",
+    "range-parser": "^1.2.1",
     "raw-body": "^2.5.1",
+    "require-directory": "^2.1.1",
+    "retry": "^0.13.1",
+    "rxjs": "^7.5.7",
     "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "saslprep": "^1.0.3",
     "send": "^0.18.0",
     "serve-static": "^1.15.0",
-    "saslprep": "^1.0.3",
-    "safer-buffer": "^2.1.2",
-    "sha.js": "^2.4.11",
     "setprototypeof": "^1.2.0",
-    "require-directory": "^2.1.1",
+    "sha.js": "^2.4.11",
+    "shell-quote": "^1.7.4",
+    "side-channel": "^1.0.4",
     "sift": "^16.0.0",
     "smart-buffer": "^4.2.0",
-    "side-channel": "^1.0.4",
     "socks": "^2.7.1",
     "sparse-bitfield": "^3.0.3",
     "spawn-command": "^0.0.2-1",
-    "supports-color": "^8.1.1",
-    "strip-ansi": "^6.0.1",
-    "string-width": "^4.2.3",
     "statuses": "^2.0.1",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "supports-color": "^8.1.1",
     "toidentifier": "^1.0.1",
-    "tslib": "^2.4.0",
     "tr46": "^3.0.0",
     "tree-kill": "^1.2.2",
-    "shell-quote": "^1.7.4",
+    "tslib": "^2.4.0",
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
-    "value-or-promise": "^1.0.11",
-    "whatwg-url": "^11.0.0",
-    "uuid": "^9.0.0",
     "utils-merge": "^1.0.1",
-    "whatwg-mimetype": "^3.0.0",
-    "webidl-conversions": "^7.0.0",
-    "wrap-ansi": "^7.0.0",
+    "uuid": "^9.0.0",
+    "value-or-promise": "^1.0.11",
     "vary": "^1.1.2",
-    "y18n": "^5.0.8",
+    "webidl-conversions": "^7.0.0",
+    "whatwg-mimetype": "^3.0.0",
+    "whatwg-url": "^11.0.0",
+    "wrap-ansi": "^7.0.0",
     "xss": "^1.0.14",
+    "y18n": "^5.0.8",
     "yallist": "^4.0.0",
     "yargs": "^17.6.0",
     "yargs-parser": "^21.1.1"
   },
-  "devDependencies": {},
   "scripts": {
     "install": "cd server && npm i && cd ../client && npm i",
     "start": "cd server && node server.js",
@@ -152,7 +152,6 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"cd server && npm start\" \"npm run client\" ",
     "test": "echo \"Error: no test specified\" && exit 1"
-
   },
   "repository": {
     "type": "git",
