--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
   "scripts": {
     "install": "cd server && npm i && cd ../client && npm i",
     "start": "cd server && node server.js",
-    "seed": "cd server node seeds/seed.js",
+    "seed": "cd server && node seeds/seed.js",
     "watch": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"cd server && npm start\" \"npm run client\" ",
