--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
   },
   "scripts": {
     "install": "cd server && npm i && cd ../client && npm i",
+    "build": "cd client && npm run build",
     "start": "cd server && node server.js",
     "seed": "cd server && node seeds/seed.js",
     "watch": "nodemon server.js",
